fix: integration tests with ungrounded variables are differenciated.